VA-238: align contents correctly in hakemusten arviointi
* Hakijan tiedot was different haight than arviointi tabs
* Arviointi tabs was width was different compared to tab content
* Heading was not centered inside its container
* Split view height needed to be changed with the heading height

--- a/va-virkailija/web/va/hakemus-details/hakemusDetails.less
+++ b/va-virkailija/web/va/hakemus-details/hakemusDetails.less
@@ -63,8 +63,8 @@ button.remove.delete-payment-button {
   margin-left: 570px;
   background-color: white;
   padding: 10px 14px 6px 10px;
-  margin-top: 0px;
-  width: 690px;
+  margin-top: 0;
+  width: 706px;
 }
 
 .fixed-content {
