--- a/va-virkailija/web/va/hakemus-list/NewHakemusListing.module.less
+++ b/va-virkailija/web/va/hakemus-list/NewHakemusListing.module.less
@@ -76,7 +76,7 @@
 }
 
 .splitView {
-  height: 240px;
+  height: 230px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
