--- a/va-virkailija/web/va/hakemusten-arviointi.less
+++ b/va-virkailija/web/va/hakemusten-arviointi.less
@@ -4,7 +4,7 @@
 
 #list-heading {
   position: relative;
-  height: 50px;
+  margin: 8px 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
