--- a/va-virkailija/web/va/style/main.less
+++ b/va-virkailija/web/va/style/main.less
@@ -27,7 +27,7 @@
     background-color: @off-white;
     padding: 20px;
     overflow-y: scroll;
-    top: @topbar-height;
+    top: 130px;
     bottom: 20px;
     width: @preview-width;
 
